--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,4 @@
-body{
-    background-color:red;
-    font-family:'Comic Sans MS'
+body {
+    background-color: #424a61;
+    font-family: 'Segoe UI';
 }
